--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Music Melofy</string>
+
+    <string name="onboarding_text">
+        <![CDATA[
+        From the <highlight>latest</highlight> to the <highlight>greatest</highlight> hits, play your favourite track on <highlight>Melofy.</highlight>
+        ]]>
+    </string>
+    <string name="already_have_an_account"><![CDATA[Already have an account? <highlight>Login</highlight>]]></string>
+    <string name="do_not_have_an_account"><![CDATA[Don\'t have an account? <highlight>Register</highlight>]]></string>
+
 </resources>
